+ removed ::: internal dependencies (within distr-Fam of pkgs) by copying 
  respective routines
+ qqplot:
   * (already there for a while) gains ability to interchange x- and y-
      axis by argument 'datax' for compatibility with other qqplots 
   * gains new methods for object of class "Estimate" (which could also be 
     seen as "fitted" objects...)
+ returnlevelplot
   * similar 
+ new  .checkEstClassForParamFamily-method to be able to cast an estimator
  to a return class specific to the resp. parametric famil  
  
  BUGFIXES:

+ fixed issue with slot withPosRestr in ParamFamParameter.R 
+ fixed issue with check.validity (reported by B.Spangl)
+ fixed some minor issue in existsPIC (in case we get 0 matrix, and less strict tolerance) 
 
##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:
+ For speeding up things, we now have an option withL2derivDistr = TRUE which
  if FALSE skips computing the image distribution in two dimensional models,
  i.e., have switched slot L2derivDistr from "DistrList" to "OptionalDistrList".

+ delayed calculation of variances and allow to skip or delay calculation of
  L2derivDistr; to this end introduced new class unions
  "OptionalNumericOrMatrixOrCall", "OptionalDistrListOrCall";
  respectively at certain stages, evaluation of the call must then be forced

+ consequence: L2LocationScaleFamilies now use median mad as starting estimator
               in robest roptest (and no longer call CvM-MDE)

+ small change to avoid frequent calls to getImageDistr

+ (L2)ParamFamily gains slots 
  .withEvalAsVar to allow delayed evaluation of variances
  .withEvalL2derivDistr to allow delayed evaluation of L2derivDistr
  .withMDE to control extra calls to MDEstimator that might not be necessary 
     in robest (e.g. with GParetoFamily())
+ correspondingly accessor L2derivDistr now checks whether it is a 
  call and if so evaluates