@@ -60,7 +60,7 @@ exportMethods("startPar", "makeOKPar")
 exportMethods("scaleshapename", "scalename", "LogDeriv")
 exportMethods("coerce", "profile", "locscalename", "scaleshapename<-")
 exportMethods("mleCalc", "mceCalc")
-exportMethods("qqplot", "returnlevelplot")
+exportMethods("qqplot", "returnlevelplot", ".checkEstClassForParamFamily")
 export("distrModMASK")
 export("trafoEst")
 export("distrModOptions", "distrModoptions", "getdistrModOption",
