@@ -1,0 +1,3 @@
+setMethod(".checkEstClassForParamFamily",
+              signature=signature(PFam="ANY",estimator="ANY"),
+              function(PFam, estimator) estimator)
